--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
+dotenv = "0.15.0"
 rocket = "=0.5.0-rc.4"
+sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-rustls", "postgres"] }
