--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.75"
+axum =  "0.6.20"
 dotenv = "0.15.0"
-rocket = "=0.5.0-rc.4"
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-rustls", "postgres"] }
+tracing = "0.1.40"
+tokio = { version = "1.0", features = ["full"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+serde_json = "1.0.108"
+serde = { version = "1.0.192", features = ["derive"] }
+env_logger = "0.10.1"
+tower-http ={ version = "0.4.4", features = ["full", "trace", "tokio"] }
